HW2/error.log
/home/osc/OperatingSystems/HW2/hello.c: In function ‘generate_maze’:
/home/osc/OperatingSystems/HW2/hello.c:76:16: error: function declaration isn’t a prototype [-Werror=strict-prototypes]
         struct Cell current = cells[randIndex];
                ^
/home/osc/OperatingSystems/HW2/hello.c:76:16: error: function ‘get_current’ is initialized like a variable
In file included from ./arch/x86/include/asm/processor.h:15:0,
                 from ./arch/x86/include/asm/cpufeature.h:4,
                 from ./arch/x86/include/asm/thread_info.h:52,
                 from include/linux/thread_info.h:54,
                 from ./arch/x86/include/asm/preempt.h:6,
                 from include/linux/preempt.h:59,
                 from include/linux/spinlock.h:50,
                 from include/linux/seqlock.h:35,
                 from include/linux/time.h:5,
                 from include/linux/stat.h:18,
                 from include/linux/module.h:10,
                 from /home/osc/OperatingSystems/HW2/hello.c:2:
./arch/x86/include/asm/current.h:17:17: error: nested function ‘get_current’ declared but never defined
 #define current get_current()
                 ^
/home/osc/OperatingSystems/HW2/hello.c:76:21: note: in expansion of macro ‘current’
         struct Cell current = cells[randIndex];
                     ^
/home/osc/OperatingSystems/HW2/hello.c:59:15: warning: unused variable ‘index’ [-Wunused-variable]
     int i, j, index;
               ^
cc1: some warnings being treated as errors
make[2]: *** [/home/osc/OperatingSystems/HW2/hello.o] Error 1
make[1]: *** [_module_/home/osc/OperatingSystems/HW2] Error 2
make: *** [all] Error 2
